@@ -6,7 +6,12 @@ namespace PaperMarioItems.Content.Items.Consumables
 { 
 	public class HoneySyrup : ModItem
 	{
-		public override void SetDefaults()
+        public override void SetStaticDefaults()
+        {
+            ItemID.Sets.ShimmerTransformToItem[Type] = PMItemID.Mushroom;
+        }
+
+        public override void SetDefaults()
 		{
             Item.width = 40;
             Item.height = 40;
