@@ -6,6 +6,11 @@ namespace PaperMarioItems.Content.Items.Consumables
 { 
 	public class JamminJelly : ModItem
 	{
+        public override void SetStaticDefaults()
+        {
+            ItemID.Sets.ShimmerTransformToItem[Type] = PMItemID.UltraMushroom;
+        }
+
         public override void SetDefaults()
 		{
             Item.width = 36;
