@@ -7,7 +7,12 @@ namespace PaperMarioItems.Content.Items.Consumables
 {
 	public class RuinPowder : ModItem
 	{
-		public override void SetDefaults()
+        public override void SetStaticDefaults()
+        {
+            ItemID.Sets.ShimmerTransformToItem[Type] = PMItemID.SpitePouch;
+        }
+
+        public override void SetDefaults()
 		{
 			Item.width = 39;
 			Item.height = 40;
