@@ -7,6 +7,11 @@ namespace PaperMarioItems.Content.Items.Consumables
 { 
 	public class SleepySheep : ModItem
 	{
+        public override void SetStaticDefaults()
+        {
+            ItemID.Sets.ShimmerTransformToItem[Type] = PMItemID.TastyTonic;
+        }
+
         public override void SetDefaults()
 		{
             Item.width = 40;
