@@ -1,3 +1,3 @@
 # PaperMarioItems
  TModLoader mod that adds Paper Mario series items
- Currently has most TTYD items added. Sleepy Sheep, Mini Mr. Mini not planned. Ice Storm is a tentative "maybe".
+ Currently has most TTYD items added. Mini Mr. Mini not planned. Ice Storm is a tentative "maybe".
