@@ -21,9 +21,3 @@ Massive thanks to Jopojelly, Cube Root, Blobwin, stormytuna, direwolf420, davidf
 All Paper Mario assets used in the mod belongs to Intelligent Systems and Nintendo.
 
 Playtesting is done by [url=https://steamcommunity.com/profiles/76561199690057166] Cosmiikat [/url].
-
-[hr][/hr]
-[h1] Feedback [/h1]
-If you have a really specific request but you really don't want to show up in the comment section of this mod for some reason, there is a feedback form available [url=https://forms.gle/aXqeT4YoRUR6HtUb9] here. [/url] I do not know why you would choose the form over the convenience of the comments but it is available.
-
-I would prefer comments, however.
